errors removed